--- a/app/src/main/res/layout/activity_event_expand.xml
+++ b/app/src/main/res/layout/activity_event_expand.xml
@@ -19,18 +19,18 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ImageView
+            <com.zolad.zoominimageview.ZoomInImageView
                 android:id="@+id/event_expand_img"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:src="@drawable/assignment"
-                android:contentDescription="@string/selectImage" />
+                android:contentDescription="@string/selectImage"
+                android:src="@drawable/assignment" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="10dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="10dp">
 
                 <TextView
                     android:id="@+id/tv_expand_title"
@@ -57,17 +57,94 @@
 
             </LinearLayout>
             <RelativeLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <Button
-                    android:layout_width="140dp"
-                    android:layout_height="60dp"
-                    android:text="@string/delete"
-                    android:onClick="btnDeleteEvent"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentEnd="true"/>
+
+                <TextView
+                    android:id="@+id/txt_comments"
+                    android:layout_width="347dp"
+                    android:layout_height="match_parent"
+                    android:onClick="txt_comment"
+                    android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
+                    android:text="@string/comments"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:onClick="close_comment"
+                    android:layout_marginEnd="20dp"
+                    android:src="@drawable/ic_file_upload_black_24dp" />
 
             </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/recycle_view"
+                    android:scrollbars="vertical">
+
+                </androidx.recyclerview.widget.RecyclerView>
+            </RelativeLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp">
+
+                <EditText
+                    android:id="@+id/ed_comment"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:hint="@string/addComment"
+                    android:importantForAutofill="no"
+                    android:inputType="textFilter"
+                    android:textSize="18sp"
+                    android:maxLines="2"
+                    app:layout_constraintBottom_toTopOf="@+id/button"
+                    app:layout_constraintEnd_toStartOf="@+id/btn_comment"
+                    app:layout_constraintStart_toStartOf="@+id/button"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/btn_comment"
+                    android:layout_width="73dp"
+                    android:layout_height="36dp"
+                    android:onClick="btn_comment"
+                    android:layout_below="@+id/ed_comment"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:text="@string/delete"
+                    android:src="@drawable/ic_file_upload_black_24dp"
+                    android:visibility="visible"
+                    app:layout_constraintBottom_toBottomOf="@+id/ed_comment"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/ed_comment" />
+
+                <Button
+                    android:id="@+id/button"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/ed_comment"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:onClick="btnDeleteEvent"
+                    android:text="@string/delete"
+                    android:visibility="visible"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
 
